--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -4,5 +4,10 @@
     "workbench.startupEditor": "newUntitledFile",
     "workbench.enableExperiments": false,
     "update.enableWindowsBackgroundUpdates": false,
-    "extensions.autoUpdate": false
+    "extensions.autoUpdate": false,
+    "workbench.editor.tabSizing": "shrink",
+    "explorer.autoReveal": false,
+    "window.zoomLevel": 0,
+    "workbench.colorTheme": "Dracula",
+    "workbench.iconTheme": "vscode-icons",
 }
