--- a/Total_Commander/wincmd.ini
+++ b/Total_Commander/wincmd.ini
@@ -2,15 +2,15 @@
 UseIniInProgramDir=7
 UseNewDefFont=1
 SetEncoding=äö.do.not.remove
-firstmnu=2747
+firstmnu=3259
 FirstTime=0
 FirstTimeIconLib=0
-SeparateTree=1
-PanelsVertical=1
-test=21
+SeparateTree=0
+PanelsVertical=0
+test=40
 onlyonce=1
 TrayIcon=0
-UseRightButton=1
+UseRightButton=0
 Savepath=1
 Savepanels=1
 MarkDirectories=1
@@ -45,10 +45,10 @@ IconOverlays=1
 IconsSpecialFolders=3
 Showicons=2
 ShowEXEandLNKicons=2
-IconsInMenus=17
-IconsOnNet=1
-MinIconWidth=-2
-MinLineHeight=-1
+IconsInMenus=21
+IconsOnNet=0
+MinIconWidth=-10
+MinLineHeight=-5
 ExplorerForCopy=0
 Win95Delete=0
 UseTrash=1
@@ -63,37 +63,44 @@ CompareIgnoreRepeatedLines=1
 CompareVertical=0
 CompareBytesPerLine=8
 Viewer=none
-Editor=%COMMANDER_PATH%\..\VSCode\Code.exe "%1"
+Editor=%COMMANDER_PATH%\..\NPP_min\notepad++.exe
 Viewertype=1
 SyncFlags=1
 SyncButtons=63
-DirTabOptions=824
+DirTabOptions=1019
 DirTabLimit=32
 ShowCentury=1
-SizeStyle=1
-SizeFooter=1
-SeparateTreeWidth=220
+SizeStyle=9
+SizeFooter=9
+SeparateTreeWidth=299
+AltSearch=3
+QuickSearchMatchBeginning=1
+QuickSearchExactMatch=0
+UseRubberBandSelection=1
+LogOptions=7198
+LogRotateLimit=0
+LogKeepCount=30
 [FileSystemPlugins64]
 $checksum$=3014672
 [left]
-path=c:\
+path=C:\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
 show=1
-sortorder=0
+sortorder=1
 negative Sortorder=0
 [right]
-path=c:\
+path=C:\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
 show=1
-sortorder=0
+sortorder=1
 negative Sortorder=0
 [Buttonbar]
 DefaultLib=wcmicon2
@@ -158,29 +165,36 @@ RenameDY=480
 RenameMax=0
 RenameTabs=115,145,345,405,525
 [Tabstops]
-0=374
-1=376
-3=431
-4=323
-6=920
+0=211
+1=213
+3=268
+4=160
+6=592
 5=100
 AdjustWidth=1
 [MkDirHistory]
-0=fix
-1=DaPlay
-2=Godot
-3=test
-4=configs
-5=Settings
+0=ÎÞ·¸×ï¼ÇÂ¼Ö¤Ã÷
+1=Shared
+2=css
+3=Scripts
+4=test
+5=icons
+6=excluded
+7=components
+8=Generator-React
+9=fix
+10=DaPlay
+11=Godot
+12=configs
+13=Settings
 [Layout]
-ButtonBarVertical=0
 DriveBar1=0
 DriveBar2=0
 DriveBarFlat=1
 InterfaceFlat=1
 DriveCombo=1
 DirectoryTabs=1
-XPthemeBg=1
+XPthemeBg=0
 CurDir=1
 TabHeader=1
 StatusBar=1
@@ -215,33 +229,31 @@ dy=1040
 [Colors]
 InverseCursor=0
 ThemedCursor=0
-InverseSelection=0
-BackColor=-1
-BackColor2=-1
-ForeColor=-1
-MarkColor=-1
-CursorColor=-1
-CursorText=-1
+InverseSelection=1
+BackColor=12632256
+BackColor2=12105912
+ForeColor=4144959
+MarkColor=7039851
+CursorColor=65280
+CursorText=65280
 [Command line history]
-0=git status
-1=git
-2=%
-3=dir >> a.txt
-4=dir
-5=poker2\
+0=6
+1=Microsoft\
+2=git status
+3=git
+4=%
+5=dir >> a.txt
+6=dir
+7=poker2\
 [RenameTemplates]
-0=_[N]
-1=scroll_bg_[N]
+0=notarization[N]
+1=icon-[N]
+2=[N8-]
+3=_[N]
+4=scroll_bg_[N]
 [SearchText]
 0=screen
 1=visibility
-[DirMenu]
-menu1=Downloads
-cmd1=cd D:\home\Fang\Downloads
-menu2=opt
-cmd2=cd D:\opt
-menu3=Home
-cmd3=cd c:\Users\touho
 [2736x1824 (10x20)]
 MenuChangeX=807
 MenuChangeY=527
@@ -265,13 +277,36 @@ CustColumnY=526
 CustColumnDX=1149
 CustColumnDY=700
 CustColumnMax=0
-Tabstops=374,376,431,323,920,100
+Tabstops=211,213,268,160,592,100
 ConnectX=943
 ConnectY=527
 ConnectDX=848
 ConnectDY=700
 ConnectMax=0
-Iconsize32=32
+Iconsize32=40
+RenameX=282
+RenameY=468
+RenameDX=1260
+RenameDY=840
+RenameMax=0
+RenameTabs=115,145,345,405,525
+FontSize=9
+FontName=Î¢ÈíÑÅºÚ
+FontSizeWindow=10
+FontNameWindow=Consolas
+FontWeight=400
+FontWeightWindow=400
+FontNameDialog=Microsoft Sans Serif
+PluginSelX=947
+PluginSelY=456
+PluginSelDX=840
+PluginSelDY=840
+PluginSelMax=0
+CmdSelX=687
+CmdSelY=767
+CmdSelDX=1114
+CmdSelDY=649
+CmdSelMax=0
 [Selection]
 0=*.mkv
 1=*.pdf
@@ -282,11 +317,6 @@ RenameDX=1260
 RenameDY=840
 RenameMax=0
 RenameTabs=115,145,345,405,525
-[Associations]
-Filter1=*.pdf
-Filter1_open=""C:\Program Files (x86)\Adobe\Acrobat Reader DC\Reader\AcroRd32.exe" "%1""
-Filter2=*.mkv
-Filter2_open=""%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe" "%1""
 [user]
 menu1=7-Zip
 cmd1=%COMMANDER_PATH%\..\7-Zip\7zFM.exe
@@ -299,57 +329,95 @@ param3=%n
 menu4=MPC
 cmd4=%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe
 param4=%n
+[DirMenu]
+menu1=Downloads
+cmd1=cd C:\Users\touho\Downloads\
+menu2=opt
+cmd2=cd D:\opt
+menu3=Home
+cmd3=cd c:\Users\touho
+[Associations]
+Filter1=*.mkv
+Filter1_open=""%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe" "%1""
+[AllResolutions]
+FontSize=9
+FontName=Î¢ÈíÑÅºÚ
+FontSizeWindow=10
+FontNameWindow=Consolas
+FontWeight=400
+FontWeightWindow=400
+FontNameDialog=Microsoft Sans Serif
+[Packer]
+InternalZip=1
+InternalUnzip=1
+zipnt=0
+ZIP=pkzip.exe
+UnZIP=pkunzip.exe
+InternalZipRate=6
+Zip83Name=0
+ZipSetDateToNewest=0
+nodelete=0
+OpenPartial=0
+[ButtonbarVertical]
+Buttonheight=53
+Buttonheight168=53
+FlatIcons=1
+SmallIcons=0
+SmallIconSize=32
+SmallIconSize168=32
+DefaultDpi=168
+XPstyle=1
 [RightHistory]
-0=c:\
-1=C:\Users\touho\Downloads\
-2=C:\Users\touho\Downloads\firefox\
-3=C:\Users\touho\Downloads\firefox\core\
-4=C:\Users\touho\Downloads\firefox\	#1,core
-5=C:\Users\touho\Downloads\	#1,firefox
-6=Z:\aria2.zip/
-7=Z:\	#5,aria2.zip
-8=z:\
-9=C:\Users\touho\Downloads\.zip/
-10=C:\Users\touho\Downloads\	#1,.zip
-11=C:\Users\touho\Downloads\adobe\
-12=C:\Users\touho\Downloads\	#1,adobe
-13=C:\Users\touho\Downloads\paint\
-14=C:\Users\touho\Downloads\	#2,paint
-15=C:\Users\touho\Downloads\node-v11.1.0-win-x64.zip/
-16=C:\Users\touho\Downloads\node-v11.1.0-win-x64.zip/node-v11.1.0-win-x64\
-17=C:\Users\touho\Downloads\node-v11.1.0-win-x64.zip/	#1,node-v11.1.0-win-x64
-18=C:\Users\touho\Downloads\	#16,node-v11.1.0-win-x64.zip
-19=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#6,Downloads
-20=D:\
-21=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#1,D:
-22=D:\Download\
-23=D:\	#1,Download
-24=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#4,Desktop
-25=C:\Users\touho\Downloads\[MVPchina]Vice City win10.zip/
+0=C:\
+1=C:\Users\touho\_Self\repos\Configurations\Total_Commander\
+2=C:\Users\touho\_Software\TC\
+3=C:\Users\touho\Downloads\
+4=C:\Users\touho\_Self\repos\Configurations\	#5,Total_Commander
+5=C:\Users\touho\_Self\repos\	#1,Configurations
+6=C:\Users\touho\_Self\	#1,repos
+7=C:\Users\touho\	#8,_Self
+8=C:\Users\touho\_Software\
+9=C:\Users\touho\_Software\	#12,TC
+10=C:\Users\touho\	#9,_Software
+11=C:\Users\touho\_Software\NPP_min\
+12=C:\Users\touho\_Software\	#8,NPP_min
+13=C:\Users\touho\AppData\Roaming\Code\
+14=C:\Users\touho\AppData\Roaming\Code\User\
+15=c:\Users\touho\Documents\
+16=C:\Users\touho\OneDrive\temp\excel_dev\
+17=C:\Users\touho\Desktop\
+18=c:\Users\touho\_Self\
+19=C:\Users\touho\OneDrive\
+20=C:\Users\touho\OneDrive\Documents\Canada\
+21=C:\Users\touho\Downloads\Aries.zip/
+22=C:\Users\touho\Downloads\	#3,Aries.zip
+23=C:\Users\touho\Downloads\Plot 9.zip/
+24=C:\Users\touho\Downloads\	#6,Plot 9.zip
+25=C:\Users\touho\Downloads\plot\
 [LeftHistory]
-0=c:\
-1=c:\Users\touho\Documents\Projects\Excel-Addin\First_Excel_Add-in\
+0=C:\
+1=C:\Users\touho\_Software\TC\
 2=C:\Users\touho\Downloads\
-3=C:\Users\touho\Desktop\
-4=c:\Users\touho\_Software\aria2\
-5=c:\Users\touho\_Software\aria2\yaaw\
-6=c:\Users\touho\_Software\aria2\	#1,yaaw
-7=c:\Users\touho\_Software\	#3,aria2
-8=c:\Users\touho\Documents\Projects\Excel-Addin\	#2,First_Excel_Add-in
-9=c:\Users\touho\Documents\Projects\	#2,Excel-Addin
-10=C:\Users\touho\Downloads\core\
-11=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#6,Downloads
-12=D:\Download\
-13=D:\	#1,Download
-14=c:\Users\touho\_Software\
-15=c:\Users\touho\Documents\Projects\
-16=C:\Users\touho\Documents\Projects\DaPlay\
-17=c:\Users\touho\OneDrive\Documents\Canada\
-18=C:\Users\touho\Desktop\cv\
-19=c:\Users\touho\
-20=c:\Users\touho\_Software\Node.js\
-21=c:\Users\touho\Documents\Projects\peromage.github.io\
-22=c:\Users\touho\Documents\Projects\peromage.github.io\scaffolds\
-23=c:\Users\touho\Documents\Projects\peromage.github.io\	#2,scaffolds
-24=c:\Users\touho\Documents\Projects\	#3,peromage.github.io
-25=c:\Users\touho\Documents\Projects\NodeJS\
+3=C:\Users\touho\Downloads\PotPlayer_Zune_hun_8_new£¨ÄÚ¸½ÎÞ°´Å¥°æ£©\
+4=C:\Users\touho\Downloads\	#1,PotPlayer_Zune_hun_8_new£¨ÄÚ¸½ÎÞ°´Å¥°æ£©
+5=C:\Users\touho\	#18,Downloads
+6=c:\Users\touho\_Software\scrcpy\
+7=C:\Users\touho\_Software\
+8=C:\Users\touho\_Self\
+9=C:\Users\touho\OneDrive\
+10=c:\Users\touho\_Games\NexonLibrary\maplestory\appdata\
+11=c:\Users\touho\_Games\NexonLibrary\maplestory\	#1,appdata
+12=c:\Users\touho\_Games\NexonLibrary\	#1,maplestory
+13=c:\Users\touho\_Games\	#4,NexonLibrary
+14=c:\Users\touho\	#7,_Games
+15=c:\Users\touho\Desktop\
+16=c:\Users\touho\	#16,Desktop
+17=c:\Users\	#7,touho
+18=c:\	#13,Users
+19=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#3,Desktop
+20=C:\Users\touho\AppData\
+21=C:\Users\touho\AppData\Roaming\
+22=c:\Users\touho\	#12,Application Data
+23=C:\Users\touho\OneDrive\Documents\Archive\	#3,PNP.7z
+24=C:\Users\touho\_Self\Repo\Report-Generator\build\
+25=C:\Users\touho\_Self\Repo\Report-Generator\
