Updated TC color for file attributes

--- a/Total_Commander/wincmd.ini
+++ b/Total_Commander/wincmd.ini
@@ -2,12 +2,12 @@
 UseIniInProgramDir=7
 UseNewDefFont=1
 SetEncoding=漩.do.not.remove
-firstmnu=3259
+firstmnu=3323
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=40
+test=187
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -80,6 +80,7 @@ UseRubberBandSelection=1
 LogOptions=7198
 LogRotateLimit=0
 LogKeepCount=30
+LastSearchOptions=0
 [FileSystemPlugins64]
 $checksum$=3014672
 [left]
@@ -164,6 +165,11 @@ RenameDX=720
 RenameDY=480
 RenameMax=0
 RenameTabs=115,145,345,405,525
+SearchX=517
+SearchY=415
+SearchDX=580
+SearchDY=264
+SearchMax=0
 [Tabstops]
 0=211
 1=213
@@ -173,20 +179,23 @@ RenameTabs=115,145,345,405,525
 5=100
 AdjustWidth=1
 [MkDirHistory]
-0=无犯罪记录证明
-1=Shared
-2=css
-3=Scripts
-4=test
-5=icons
-6=excluded
-7=components
-8=Generator-React
-9=fix
-10=DaPlay
-11=Godot
-12=configs
-13=Settings
+0=Downloads
+1=Laptop
+2=Desktop
+3=无犯罪记录证明
+4=Shared
+5=css
+6=Scripts
+7=test
+8=icons
+9=excluded
+10=components
+11=Generator-React
+12=fix
+13=DaPlay
+14=Godot
+15=configs
+16=Settings
 [Layout]
 DriveBar1=0
 DriveBar2=0
@@ -236,6 +245,18 @@ ForeColor=4144959
 MarkColor=7039851
 CursorColor=65280
 CursorText=65280
+ColorFilter1=>CompressedFiles
+ColorFilter1Color=16711680
+ColorFilter2=>EncryptedFiles
+ColorFilter2Color=4227072
+ColorFilter3=>ReadonlyFiles
+ColorFilter3Color=128
+ColorFilter4=>SystemFiles
+ColorFilter4Color=8421631
+ColorFilter5=>HiddenFiles
+ColorFilter5Color=9539985
+ColorFilter6=>ArchiveFiles
+ColorFilter6Color=32896
 [Command line history]
 0=6
 1=Microsoft\
@@ -329,13 +350,6 @@ param3=%n
 menu4=MPC
 cmd4=%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe
 param4=%n
-[DirMenu]
-menu1=Downloads
-cmd1=cd C:\Users\touho\Downloads\
-menu2=opt
-cmd2=cd D:\opt
-menu3=Home
-cmd3=cd c:\Users\touho
 [Associations]
 Filter1=*.mkv
 Filter1_open=""%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe" "%1""
@@ -359,7 +373,7 @@ ZipSetDateToNewest=0
 nodelete=0
 OpenPartial=0
 [ButtonbarVertical]
-Buttonheight=53
+Buttonheight=29
 Buttonheight168=53
 FlatIcons=1
 SmallIcons=0
@@ -421,3 +435,39 @@ XPstyle=1
 23=C:\Users\touho\OneDrive\Documents\Archive\	#3,PNP.7z
 24=C:\Users\touho\_Self\Repo\Report-Generator\build\
 25=C:\Users\touho\_Self\Repo\Report-Generator\
+[DirMenu]
+menu1=Downloads
+cmd1=cd C:\Users\F\Downloads
+menu2=F
+cmd2=cd C:\Users\F
+menu3=Desktop
+cmd3=cd C:\Users\F\Desktop
+menu4=_opt
+cmd4=cd C:\Users\F\_opt
+[NewFileHistory]
+0=requirement
+[searches]
+SystemFiles_SearchFor=
+SystemFiles_SearchIn=
+SystemFiles_SearchText=
+SystemFiles_SearchFlags=0|002000000000||||||||00011|0000|||
+CompressedFiles_SearchFor=
+CompressedFiles_SearchIn=
+CompressedFiles_SearchText=
+CompressedFiles_SearchFlags=0|002001000000||||||||00001|0000|||
+EncryptedFiles_SearchFor=
+EncryptedFiles_SearchIn=
+EncryptedFiles_SearchText=
+EncryptedFiles_SearchFlags=0|002000000010||||||||00001|0000|||
+ReadonlyFiles_SearchFor=
+ReadonlyFiles_SearchIn=
+ReadonlyFiles_SearchText=
+ReadonlyFiles_SearchFlags=0|002000000000||||||||01001|0000|||
+HiddenFiles_SearchFor=
+HiddenFiles_SearchIn=
+HiddenFiles_SearchText=
+HiddenFiles_SearchFlags=0|002000000000||||||||00101|0000|||
+ArchiveFiles_SearchFor=
+ArchiveFiles_SearchIn=
+ArchiveFiles_SearchText=
+ArchiveFiles_SearchFlags=0|002000000000||||||||10001|0000|||
