--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -6,6 +6,7 @@
 [core]
 	autocrlf = false
 	quotepath = false
+	editor = vim
 [alias]
 	gg = log --graph --pretty=format:'%Cred%h%Creset [%an] - %s %Cgreen(%ci)%Creset %C(cyan)%d%Creset' --abbrev-commit --date=relative
 	ss = status
