--- a/gitc/.gitconfig
+++ b/gitc/.gitconfig
@@ -6,7 +6,6 @@
 [core]
 	autocrlf = false
 	quotepath = false
-	editor = vim
 [alias]
 	gg = log --graph --pretty=format:'%Cred%h%Creset [%an] - %s %Cgreen(%ci)%Creset %C(cyan)%d%Creset' --abbrev-commit --date=relative
 	ss = status
@@ -17,3 +16,5 @@
 	encoding = utf-8
 [i18n]
 	logoutputencoding = utf-8
+[credential]
+	helper = manager
