totalcommander: Updated config

--- a/totalcommander/wincmd.ini
+++ b/totalcommander/wincmd.ini
@@ -2,7 +2,7 @@
 UseIniInProgramDir=7
 UseNewDefFont=1
 SetEncoding=漩.do.not.remove
-firstmnu=3579
+firstmnu=763
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
@@ -84,7 +84,7 @@ LastSearchOptions=0
 [FileSystemPlugins64]
 $checksum$=3014672
 [left]
-path=C:\Users\F\_opt\
+path=C:\Users\F\.config\Workenv\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -94,15 +94,15 @@ show=1
 sortorder=1
 negative Sortorder=0
 [right]
-path=C:\Users\F\_opt\
-ViewMode=-1
+path=C:\Users\F\scoop\persist\totalcommander\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
 SpecialView=0
 show=1
-sortorder=1
-negative Sortorder=0
+sortorder=3
+negative Sortorder=1
 [Buttonbar]
 DefaultLib=wcmicon2
 Buttonheight=29
@@ -148,8 +148,8 @@ CmdSelY=330
 CmdSelDX=653
 CmdSelDY=371
 CmdSelMax=0
-MenuChangeX=958
-MenuChangeY=215
+MenuChangeX=584
+MenuChangeY=300
 MenuChangeDX=640
 MenuChangeDY=400
 MenuChangeMax=0
@@ -185,27 +185,27 @@ SyncTabs=92,152,247,270,362,422
 5=100
 AdjustWidth=1
 [MkDirHistory]
-0=New HTC_Signals
-1=new
-2=ss
-3=tools
-4=images
-5=modules
-6=Syslinux
-7=syslinux.cfg
-8=iso
-9=Downloads
-10=Laptop
-11=Desktop
-12=无犯罪记录证明
-13=Shared
-14=css
-15=Scripts
-16=test
-17=icons
-18=excluded
-19=components
-20=Generator-React
+0=_setup_
+1=taskscheduler
+2=systemd
+3=New HTC_Signals
+4=new
+5=ss
+6=tools
+7=images
+8=modules
+9=Syslinux
+10=syslinux.cfg
+11=iso
+12=Downloads
+13=Laptop
+14=Desktop
+15=无犯罪记录证明
+16=Shared
+17=css
+18=Scripts
+19=test
+20=icons
 [Layout]
 DriveBar1=0
 DriveBar2=0
@@ -427,97 +427,103 @@ Contents1=[=tc.path]
 Options1=-1|1|96
 AutoLoad=1
 Titles=path..
-[lefttabs]
-0_path=c:\Users\F\_repos\DV-ReportAnalytics\
-0_options=1|1|0|0|0|0|0|
-1_path=c:\Users\F\_repos\
-1_options=1|1|0|0|0|0|0|
-2_path=j:\
-2_options=1|1|0|0|0|0|0|
-activetab=3
-[righttabs]
-0_path=C:\Users\F\
-0_options=1|3|1|0|0|0|0|
-1_path=C:\Users\F\Downloads\
-1_options=1|3|1|0|0|0|0|
-2_path=c:\Users\F\_scripts\
-2_options=1|3|1|0|0|0|0|
-3_path=C:\Users\F\Desktop\
-3_options=1|3|1|0|0|0|0|
-4_path=c:\Users\F\source\repos\
-4_options=1|3|1|0|0|0|0|
-5_path=c:\
-5_options=1|3|1|0|0|0|0|
-activetab=2
-[RightHistory]
-0=C:\Users\F\_opt\
-1=c:\
-2=C:\Users\F\Downloads\
-3=C:\Users\F\Downloads\putty.zip/
-4=C:\Users\F\Downloads\	#2,putty.zip
-5=c:\Users\F\_scripts\
-6=c:\Users\F\.ssh\
-7=c:\Users\F\	#5,.ssh
-8=c:\Users\F\_opt\FRP\
-9=c:\Users\F\_opt\	#5,FRP
-10=c:\Users\F\	#8,_opt
-11=c:\Users\	#4,F
-12=c:\	#12,Users
-13=C:\Users\F\Desktop\DV\
-14=c:\Users\F\	#10,_scripts
-15=c:\Users\F\	#20,Downloads
-16=c:\Users\F\_repos\
-17=c:\Users\F\	#9,_repos
-18=c:\Users\F\_sdks\
-19=c:\Users\F\	#11,_sdks
-20=c:\Users\F\Documents\
-21=c:\Users\F\	#19,Documents
-22=c:\Users\Public\
-23=c:\Users\	#5,Public
-24=d:\
-25=c:\Users\F\
-[LeftHistory]
-0=C:\Users\F\_opt\
-1=C:\Users\F\_opt\FRP\
-2=C:\Users\F\_opt\	#5,FRP
-3=C:\Users\F\_opt\_logs\
-4=C:\Users\F\_opt\	#1,_logs
-5=C:\Users\F\_opt\PuTTY\
-6=C:\Users\F\_opt\	#10,PuTTY
-7=C:\Users\F\_opt\Git\
-8=C:\Users\F\_opt\	#6,Git
-9=C:\Users\F\_opt\NPP_min\
-10=C:\Users\F\_opt\	#9,NPP_min
-11=d:\
-12=j:\
-13=D:\VHD\
-14=D:\	#3,VHD
-15=::{20D04FE0-3AEA-1069-A2D8-08002B30309D}|\\This PC\	#1,D:
-16=C:\Users\F\_opt\Godot_v3.1-stable_mono_win64\
-17=c:\Users\F\_repos\
-18=c:\Users\F\_repos\DaPlay_c#\
-19=c:\Users\F\_repos\	#4,DaPlay_c#
-20=c:\Users\F\_repos\DaPlay\
-21=c:\Users\F\_repos\DaPlay\_Nodes\
-22=c:\Users\F\_repos\DaPlay\_Nodes\Projectile\
-23=c:\Users\F\_repos\DaPlay\_Nodes\	#2,Projectile
-24=c:\Users\F\_repos\DaPlay\_Nodes\Ships_FX\
-25=c:\Users\F\_repos\DaPlay\_Nodes\	#4,Ships_FX
-[user]
-menu1=7-Zip
-cmd1=%COMMANDER_PATH%\..\7-zip\7zFM.exe
-param1=%n
-menu2=PowerShell
-cmd2=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-menu3=VSCode
-cmd3=%COMMANDER_PATH%\..\vscode\code.exe
-param3=%n
-menu4=MPC
-cmd4=%COMMANDER_PATH%\..\MPC-HC\mpc-hc64.exe
-param4=%n
 [2736x1824 (8x16)]
 MenuChangeX=807
 MenuChangeY=536
 MenuChangeDX=1120
 MenuChangeDY=700
 MenuChangeMax=0
+[user]
+menu1=7-Zip
+cmd1=%COMMANDER_PATH%\..\..\7zip\current\7zFM.exe
+param1=%n
+menu2=PowerShell
+cmd2=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+menu3=VSCode
+cmd3=%COMMANDER_PATH%\..\..\vscode-portable\current\bin\code.cmd
+param3=%n
+menu4=MPC
+cmd4=%COMMANDER_PATH%\..\..\MPC-HC\current\mpc-hc64.exe
+param4=%n
+[lefttabs]
+0_path=c:\Users\F\_repos\DV-ReportAnalytics\
+0_options=1|1|0|0|0|0|0|
+1_path=C:\Users\F\_opt\
+1_options=1|1|0|0|0|0|0|
+2_path=C:\Users\F\scoop\buckets\extras\bucket\
+2_options=1|1|0|0|0|0|0|
+3_path=C:\Users\F\scoop\apps\vncviewer\6.19.325\
+3_options=1|1|0|0|0|0|0|
+4_path=C:\Users\F\Documents\WindowsPowerShell\
+4_options=1|1|0|0|0|0|0|
+activetab=4
+[righttabs]
+0_path=C:\Users\F\scoop\persist\cmder\config\
+0_options=1|1|0|0|0|0|0|
+1_path=C:\Users\F\Downloads\frp_0.25.3_linux_amd64.tar.gz\
+1_options=1|3|1|50|8|0|0|
+2_path=C:\Users\F\_opt\
+2_options=1|1|0|0|0|0|0|
+3_path=c:\Users\F\_scripts\
+3_options=1|3|1|0|0|0|0|
+4_path=C:\Users\F\Desktop\
+4_options=1|3|1|0|0|0|0|
+5_path=c:\Users\F\source\repos\
+5_options=1|3|1|0|0|0|0|
+6_path=C:\Users\F\Downloads\
+6_options=1|3|1|0|0|0|0|
+activetab=0
+[RightHistory]
+0=C:\Users\F\scoop\persist\totalcommander\
+1=C:\Users\F\scoop\persist\	#8,totalcommander
+2=C:\Users\F\scoop\	#4,persist
+3=C:\Users\F\scoop\persist\cmder\config\
+4=C:\Users\F\Downloads\
+5=C:\Users\F\Downloads\ColorTool.zip/ColorTool\
+6=C:\Users\F\scoop\persist\cmder\config\profile.d\
+7=C:\Users\F\scoop\persist\cmder\config\	#1,profile.d
+8=C:\Users\F\scoop\persist\cmder\	#1,config
+9=C:\Users\F\Downloads\ColorTool.zip/	#1,ColorTool
+10=C:\Users\F\Downloads\	#1,ColorTool.zip
+11=C:\Users\F\Downloads\iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip/iterm-fb852408c1320069a416d734eca876e82ac4cc43\
+12=C:\Users\F\Downloads\iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip/	#1,iterm-fb852408c1320069a416d734eca876e82ac4cc43
+13=C:\Users\F\Downloads\	#1,iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip
+14=c:\
+15=C:\Users\F\scoop\
+16=C:\Users\F\scoop\apps\
+17=C:\Users\F\scoop\	#1,apps
+18=C:\Users\F\scoop\persist\
+19=C:\Users\F\scoop\persist\frp\
+20=C:\Users\F\scoop\persist\	#3,frp
+21=C:\Users\F\scoop\persist\frp\systemd\
+22=C:\Users\F\scoop\persist\frp\	#1,systemd
+23=C:\Users\F\AppData\Local\Temp\_tc\frp_0.25.3_linux_amd64.tar/frp_0.25.3_linux_amd64\
+24=C:\Users\F\AppData\Local\Temp\_tc\frp_0.25.3_linux_amd64.tar/	#1,frp_0.25.3_linux_amd64
+25=C:\Users\F\Downloads\frp_0.25.3_linux_amd64.tar.gz/
+[LeftHistory]
+0=C:\Users\F\.config\Workenv\
+1=C:\Users\F\scoop\apps\vncviewer\6.19.325\
+2=C:\Users\F\scoop\apps\vncviewer\	#1,6.19.325
+3=C:\Users\F\scoop\apps\	#22,vncviewer
+4=C:\Users\F\scoop\	#1,apps
+5=C:\Users\F\scoop\persist\
+6=C:\Users\F\scoop\persist\vim\
+7=C:\Users\F\scoop\persist\	#10,vim
+8=C:\Users\F\scoop\	#4,persist
+9=C:\Users\F\scoop\persist\colortool\
+10=C:\Users\F\scoop\persist\colortool\schemes\
+11=C:\Users\F\_opt\
+12=c:\Users\F\_repos\
+13=c:\Users\
+14=C:\Users\F\Documents\WindowsPowerShell\
+15=C:\Users\F\Documents\	#10,WindowsPowerShell
+16=c:\Users\F\
+17=c:\Users\	#4,F
+18=c:\	#16,Users
+19=C:\Users\F\scoop\buckets\extras\bucket\
+20=C:\Users\F\scoop\persist\colortool\	#1,schemes
+21=C:\Users\F\scoop\persist\	#2,colortool
+22=C:\Users\F\scoop\persist\cmder\
+23=C:\Users\F\scoop\persist\cmder\config\
+24=C:\Users\F\.config\Workenv\colortool\
+25=C:\Users\F\.config\Workenv\colortool\schemes\
