--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@
 !/.gitignore
 !/LICENSE
 !/README.md
-# setup folder
-!/_setup_/**
+
+# powershell
+!/powershell/**
+
+# shell
+!/shell/**
 
 # colortool
 !/colortool/**
