vscode-portable: updated settings

--- a/vscode-portable/data/user-data/User/settings.json
+++ b/vscode-portable/data/user-data/User/settings.json
@@ -19,4 +19,5 @@
         "*.dvs": "vb"
     },
     "window.restoreWindows": "none",
+    "powershell.powerShellExePath": "C:\\Windows\\SysWow64\\WindowsPowerShell\\v1.0\\powershell.exe",
 }
