totalcommander: updated config

--- a/totalcommander/wincmd.ini
+++ b/totalcommander/wincmd.ini
@@ -2,12 +2,12 @@
 UseIniInProgramDir=7
 UseNewDefFont=1
 SetEncoding=漩.do.not.remove
-firstmnu=763
+firstmnu=571
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=187
+test=173
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -63,7 +63,7 @@ CompareIgnoreRepeatedLines=1
 CompareVertical=0
 CompareBytesPerLine=8
 Viewer=none
-Editor=%COMMANDER_PATH%\..\NPP_min\notepad++.exe
+Editor=notepad.exe
 Viewertype=1
 SyncFlags=0
 SyncButtons=63
@@ -84,7 +84,7 @@ LastSearchOptions=0
 [FileSystemPlugins64]
 $checksum$=3014672
 [left]
-path=C:\Users\F\.config\Workenv\
+path=C:\Users\touho\Downloads\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -94,7 +94,7 @@ show=1
 sortorder=1
 negative Sortorder=0
 [right]
-path=C:\Users\F\scoop\persist\totalcommander\
+path=C:\Users\touho\Downloads\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -105,14 +105,16 @@ sortorder=3
 negative Sortorder=1
 [Buttonbar]
 DefaultLib=wcmicon2
-Buttonheight=29
+Buttonheight=51
 Buttonheight96=29
 FlatIcons=1
 SmallIcons=1
-SmallIconSize=16
+SmallIconSize=28
 SmallIconSize96=16
-DefaultDpi=96
-XPstyle=1
+DefaultDpi=168
+XPstyle=0
+Buttonheight168=51
+SmallIconSize168=28
 [ButtonbarCache]
 IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
@@ -177,41 +179,41 @@ SyncDY=604
 SyncMax=0
 SyncTabs=92,152,247,270,362,422
 [Tabstops]
-0=211
-1=213
-3=268
-4=160
-6=592
+0=340
+1=342
+3=397
+4=289
+6=849
 5=100
 AdjustWidth=1
 [MkDirHistory]
-0=_setup_
-1=taskscheduler
-2=systemd
-3=New HTC_Signals
-4=new
-5=ss
-6=tools
-7=images
-8=modules
-9=Syslinux
-10=syslinux.cfg
-11=iso
-12=Downloads
-13=Laptop
-14=Desktop
-15=无犯罪记录证明
-16=Shared
-17=css
-18=Scripts
-19=test
-20=icons
+0=sarasa-gothic-ttc-0.8.0
+1=_setup_
+2=taskscheduler
+3=systemd
+4=New HTC_Signals
+5=new
+6=ss
+7=tools
+8=images
+9=modules
+10=Syslinux
+11=syslinux.cfg
+12=iso
+13=Downloads
+14=Laptop
+15=Desktop
+16=无犯罪记录证明
+17=Shared
+18=css
+19=Scripts
+20=test
 [Layout]
-DriveBar1=0
-DriveBar2=0
+DriveBar1=1
+DriveBar2=1
 DriveBarFlat=1
 InterfaceFlat=1
-DriveCombo=1
+DriveCombo=0
 DirectoryTabs=1
 XPthemeBg=0
 CurDir=1
@@ -221,7 +223,8 @@ CmdLine=1
 KeyButtons=1
 HistoryHotlistButtons=1
 BreadCrumbBar=1
-ButtonBar=0
+ButtonBarVertical=0
+ButtonBar=1
 [ListerPlugins64]
 $checksum$=3014672
 [ContentPlugins64]
@@ -268,14 +271,15 @@ ColorFilter5Color=9539985
 ColorFilter6=>ArchiveFiles
 ColorFilter6Color=32896
 [Command line history]
-0=6
-1=Microsoft\
-2=git status
-3=git
-4=%
-5=dir >> a.txt
-6=dir
-7=poker2\
+0=vlc
+1=6
+2=Microsoft\
+3=git status
+4=git
+5=%
+6=dir >> a.txt
+7=dir
+8=poker2\
 [RenameTemplates]
 0=[N]
 1=notarization[N]
@@ -309,7 +313,7 @@ CustColumnY=526
 CustColumnDX=1149
 CustColumnDY=700
 CustColumnMax=0
-Tabstops=211,213,268,160,592,100
+Tabstops=340,342,397,289,849,100
 ConnectX=943
 ConnectY=527
 ConnectDX=848
@@ -334,11 +338,24 @@ PluginSelY=456
 PluginSelDX=840
 PluginSelDY=840
 PluginSelMax=0
-CmdSelX=687
-CmdSelY=767
+CmdSelX=352
+CmdSelY=373
 CmdSelDX=1114
 CmdSelDY=649
 CmdSelMax=0
+maximized=1
+x=405
+y=177
+dx=1925
+dy=1400
+Divider=500
+DividerQuickView=500
+DividerComments=500
+SearchX=894
+SearchY=681
+SearchDX=1011
+SearchDY=462
+SearchMax=0
 [Selection]
 0=*.dvs
 1=*.*
@@ -384,15 +401,6 @@ SmallIconSize=32
 SmallIconSize168=32
 DefaultDpi=168
 XPstyle=1
-[DirMenu]
-menu1=Downloads
-cmd1=cd C:\Users\F\Downloads
-menu2=F
-cmd2=cd C:\Users\F
-menu3=Desktop
-cmd3=cd C:\Users\F\Desktop
-menu4=_opt
-cmd4=cd C:\Users\F\_opt
 [NewFileHistory]
 0=requirement
 [searches]
@@ -434,17 +442,15 @@ MenuChangeDX=1120
 MenuChangeDY=700
 MenuChangeMax=0
 [user]
-menu1=7-Zip
-cmd1=%COMMANDER_PATH%\..\..\7zip\current\7zFM.exe
-param1=%n
-menu2=PowerShell
-cmd2=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-menu3=VSCode
-cmd3=%COMMANDER_PATH%\..\..\vscode-portable\current\bin\code.cmd
-param3=%n
-menu4=MPC
-cmd4=%COMMANDER_PATH%\..\..\MPC-HC\current\mpc-hc64.exe
-param4=%n
+[DirMenu]
+menu1=Home
+cmd1=cd %USERPROFILE%\
+menu2=Desktop
+cmd2=cd %USERPROFILE%\Desktop\
+menu3=Downloads
+cmd3=cd %USERPROFILE%\Downloads\
+menu4=Documents
+cmd4=cd %USERPROFILE%\Documents\
 [lefttabs]
 0_path=c:\Users\F\_repos\DV-ReportAnalytics\
 0_options=1|1|0|0|0|0|0|
@@ -452,78 +458,70 @@ param4=%n
 1_options=1|1|0|0|0|0|0|
 2_path=C:\Users\F\scoop\buckets\extras\bucket\
 2_options=1|1|0|0|0|0|0|
-3_path=C:\Users\F\scoop\apps\vncviewer\6.19.325\
+3_path=C:\Users\touho\scoop\persist\colortool\
 3_options=1|1|0|0|0|0|0|
-4_path=C:\Users\F\Documents\WindowsPowerShell\
-4_options=1|1|0|0|0|0|0|
 activetab=4
 [righttabs]
-0_path=C:\Users\F\scoop\persist\cmder\config\
-0_options=1|1|0|0|0|0|0|
-1_path=C:\Users\F\Downloads\frp_0.25.3_linux_amd64.tar.gz\
-1_options=1|3|1|50|8|0|0|
-2_path=C:\Users\F\_opt\
-2_options=1|1|0|0|0|0|0|
-3_path=c:\Users\F\_scripts\
+0_path=C:\Users\touho\.config\workenv\
+0_options=1|3|1|0|0|0|0|
+1_path=C:\Users\F\scoop\persist\cmder\config\
+1_options=1|1|0|0|0|0|0|
+2_path=C:\Users\
+2_options=1|3|1|0|0|0|0|
+3_path=c:\Users\F\source\repos\
 3_options=1|3|1|0|0|0|0|
-4_path=C:\Users\F\Desktop\
-4_options=1|3|1|0|0|0|0|
-5_path=c:\Users\F\source\repos\
-5_options=1|3|1|0|0|0|0|
-6_path=C:\Users\F\Downloads\
-6_options=1|3|1|0|0|0|0|
-activetab=0
+activetab=4
 [RightHistory]
-0=C:\Users\F\scoop\persist\totalcommander\
-1=C:\Users\F\scoop\persist\	#8,totalcommander
-2=C:\Users\F\scoop\	#4,persist
-3=C:\Users\F\scoop\persist\cmder\config\
-4=C:\Users\F\Downloads\
-5=C:\Users\F\Downloads\ColorTool.zip/ColorTool\
-6=C:\Users\F\scoop\persist\cmder\config\profile.d\
-7=C:\Users\F\scoop\persist\cmder\config\	#1,profile.d
-8=C:\Users\F\scoop\persist\cmder\	#1,config
-9=C:\Users\F\Downloads\ColorTool.zip/	#1,ColorTool
-10=C:\Users\F\Downloads\	#1,ColorTool.zip
-11=C:\Users\F\Downloads\iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip/iterm-fb852408c1320069a416d734eca876e82ac4cc43\
-12=C:\Users\F\Downloads\iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip/	#1,iterm-fb852408c1320069a416d734eca876e82ac4cc43
-13=C:\Users\F\Downloads\	#1,iterm-fb852408c1320069a416d734eca876e82ac4cc43.zip
-14=c:\
-15=C:\Users\F\scoop\
-16=C:\Users\F\scoop\apps\
-17=C:\Users\F\scoop\	#1,apps
-18=C:\Users\F\scoop\persist\
-19=C:\Users\F\scoop\persist\frp\
-20=C:\Users\F\scoop\persist\	#3,frp
-21=C:\Users\F\scoop\persist\frp\systemd\
-22=C:\Users\F\scoop\persist\frp\	#1,systemd
-23=C:\Users\F\AppData\Local\Temp\_tc\frp_0.25.3_linux_amd64.tar/frp_0.25.3_linux_amd64\
-24=C:\Users\F\AppData\Local\Temp\_tc\frp_0.25.3_linux_amd64.tar/	#1,frp_0.25.3_linux_amd64
-25=C:\Users\F\Downloads\frp_0.25.3_linux_amd64.tar.gz/
+0=C:\Users\touho\Downloads\
+1=C:\Users\touho\Downloads\sarasa-gothic-ttc-0.8.0.7z/
+2=C:\Users\touho\Downloads\	#3,sarasa-gothic-ttc-0.8.0.7z
+3=C:\Users\touho\Downloads\sarasa-gothic-ttc-0.8.0\
+4=C:\Users\touho\Downloads\	#2,sarasa-gothic-ttc-0.8.0
+5=C:\Users\touho\Downloads\	#2,sarasa-gothic-ttc-0.8.0.7z
+6=C:\Users\touho\	#16,Downloads
+7=C:\Users\	#7,touho
+8=C:\Users\touho\.config\workenv\
+9=C:\Users\touho\.config\workenv\vscode-portable\
+10=C:\Users\touho\.config\workenv\vscode-portable\data\
+11=C:\Users\touho\.config\workenv\vscode-portable\	#1,data
+12=C:\Users\touho\.config\workenv\	#11,vscode-portable
+13=C:\Users\touho\.config\	#2,workenv
+14=C:\Users\touho\	#3,.config
+15=C:\Users\
+16=C:\Users\touho\
+17=C:\Users\touho\_Software\
+18=C:\Users\touho\	#8,_Software
+19=C:\Users\F\scoop\persist\totalcommander\
+20=C:\Users\F\scoop\persist\	#8,totalcommander
+21=C:\Users\F\scoop\	#4,persist
+22=C:\Users\F\scoop\persist\cmder\config\
+23=C:\Users\F\Downloads\
+24=C:\Users\F\Downloads\ColorTool.zip/ColorTool\
+25=C:\Users\F\scoop\persist\cmder\config\profile.d\
 [LeftHistory]
-0=C:\Users\F\.config\Workenv\
-1=C:\Users\F\scoop\apps\vncviewer\6.19.325\
-2=C:\Users\F\scoop\apps\vncviewer\	#1,6.19.325
-3=C:\Users\F\scoop\apps\	#22,vncviewer
-4=C:\Users\F\scoop\	#1,apps
-5=C:\Users\F\scoop\persist\
-6=C:\Users\F\scoop\persist\vim\
-7=C:\Users\F\scoop\persist\	#10,vim
-8=C:\Users\F\scoop\	#4,persist
-9=C:\Users\F\scoop\persist\colortool\
-10=C:\Users\F\scoop\persist\colortool\schemes\
-11=C:\Users\F\_opt\
-12=c:\Users\F\_repos\
-13=c:\Users\
-14=C:\Users\F\Documents\WindowsPowerShell\
-15=C:\Users\F\Documents\	#10,WindowsPowerShell
-16=c:\Users\F\
-17=c:\Users\	#4,F
-18=c:\	#16,Users
-19=C:\Users\F\scoop\buckets\extras\bucket\
-20=C:\Users\F\scoop\persist\colortool\	#1,schemes
-21=C:\Users\F\scoop\persist\	#2,colortool
-22=C:\Users\F\scoop\persist\cmder\
-23=C:\Users\F\scoop\persist\cmder\config\
-24=C:\Users\F\.config\Workenv\colortool\
-25=C:\Users\F\.config\Workenv\colortool\schemes\
+0=C:\Users\touho\Downloads\
+1=C:\Users\touho\
+2=C:\Users\touho\Desktop\
+3=C:\Users\touho\Downloads\sarasa-gothic-ttc-0.8.0\
+4=C:\Users\touho\scoop\apps\
+5=C:\Users\touho\scoop\apps\colortool\
+6=C:\Users\touho\scoop\apps\colortool\current\
+7=C:\Users\touho\scoop\apps\colortool\current\schemes\
+8=C:\Users\touho\scoop\apps\colortool\current\	#1,schemes
+9=C:\Users\touho\scoop\apps\colortool\	#2,current
+10=C:\Users\touho\scoop\apps\	#6,colortool
+11=C:\Users\touho\scoop\	#1,apps
+12=C:\Users\touho\scoop\persist\everything\
+13=C:\Users\touho\scoop\persist\colortool\
+14=C:\Users\touho\scoop\persist\	#2,colortool
+15=C:\Users\touho\scoop\persist\cmder\
+16=C:\Users\touho\scoop\persist\cmder\config\
+17=C:\Users\touho\scoop\persist\cmder\	#1,config
+18=C:\Users\touho\scoop\persist\	#1,cmder
+19=C:\Users\touho\scoop\persist\vscode-portable\data\user-data\User\
+20=C:\Users\touho\scoop\persist\vscode-portable\data\user-data\	#8,User
+21=C:\Users\touho\scoop\persist\vscode-portable\data\	#2,user-data
+22=C:\Users\touho\scoop\persist\vscode-portable\data\extensions\
+23=C:\Users\touho\scoop\persist\vscode-portable\data\	#1,extensions
+24=C:\Users\touho\scoop\persist\vscode-portable\data\user-data\
+25=C:\Users\touho\scoop\persist\	#2,everything
