--- a/frp/systemd/frpc.service
+++ b/frp/systemd/frpc.service
@@ -7,8 +7,8 @@ Type=simple
 User=nobody
 Restart=on-failure
 RestartSec=5s
-ExecStart=/usr/bin/frpc -c /etc/frp/frpc.ini
-ExecReload=/usr/bin/frpc reload -c /etc/frp/frpc.ini
+ExecStart=/usr/local/bin/frpc -c /usr/local/etc/frpc.ini
+ExecReload=/usr/local/bin/frpc reload -c /usr/local/etc/frpc.ini
 
 [Install]
 WantedBy=multi-user.target
