--- a/frp/systemd/frps.service
+++ b/frp/systemd/frps.service
@@ -7,7 +7,7 @@ Type=simple
 User=nobody
 Restart=on-failure
 RestartSec=5s
-ExecStart=/usr/bin/frps -c /etc/frp/frps.ini
+ExecStart=/usr/local/bin/frps -c /usr/local/etc/frps.ini
 
 [Install]
 WantedBy=multi-user.target
