frp: updated config

--- a/frp/frpc.ini
+++ b/frp/frpc.ini
@@ -11,7 +11,7 @@ server_port = 7000
 # http_proxy = socks5://user:passwd@192.168.1.128:1080
 
 # console or real logFile path like ./frpc.log
-log_file = ./frpc.log
+log_file = /var/log/frpc.log
 
 # trace, debug, info, warn, error
 log_level = info
