--- a/frp/frps.ini
+++ b/frp/frps.ini
@@ -36,7 +36,7 @@ bind_port = 7000
 # dashboard assets directory(only for debug mode)
 # assets_dir = ./static
 # console or real logFile path like ./frps.log
-log_file = ./frps.log
+log_file = /var/log/frps.log
 
 # trace, debug, info, warn, error
 log_level = info
