--- a/frp/systemd/frpc.service
+++ b/frp/systemd/frpc.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=nobody
+#User=nobody
 Restart=on-failure
 RestartSec=5s
 ExecStart=/usr/local/bin/frpc -c /usr/local/etc/frpc.ini
