--- a/totalcommander/wincmd.ini
+++ b/totalcommander/wincmd.ini
@@ -1,12 +1,12 @@
 [Configuration]
 UseNewDefFont=1
 SetEncoding=ao.do.not.remove
-firstmnu=507
+firstmnu=1659
 FirstTime=0
 FirstTimeIconLib=0
 SeparateTree=0
 PanelsVertical=0
-test=173
+test=215
 onlyonce=1
 TrayIcon=0
 UseRightButton=0
@@ -99,11 +99,13 @@ Buttonbar=%APPDATA%\GHISLER\vertical.bar
 Buttonheight=29
 Buttonheight168=53
 FlatIcons=1
-SmallIcons=0
-SmallIconSize=32
+SmallIcons=1
+SmallIconSize=16
 SmallIconSize168=32
-DefaultDpi=168
+DefaultDpi=96
 XPstyle=1
+Buttonheight96=29
+SmallIconSize96=16
 [ButtonbarCache]
 IconDll_default.bar=TCNewLib1
 IconDll_vertical.bar=TCNewLib1
@@ -130,8 +132,8 @@ CmdLine=1
 KeyButtons=1
 HistoryHotlistButtons=1
 BreadCrumbBar=1
-ButtonBarVertical=0
 ButtonBar=1
+ButtonBarVertical=0
 [ViewModeSwitch]
 [Colors]
 InverseCursor=0
@@ -169,6 +171,11 @@ FontNameWindow=Consolas
 FontWeight=400
 FontWeightWindow=400
 FontNameDialog=Microsoft Sans Serif
+CmdSelX=636
+CmdSelY=330
+CmdSelDX=653
+CmdSelDY=371
+CmdSelMax=0
 [Lister]
 textwidth=81
 binwidth=75
