powershell: Still updating

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,2 @@
-## Ignore Blacklist
-
-
-# powershell
-
-# shell
-
-# colortool
-
-# everything
-everything/*.db
-
-# frp
-
-
-# git
-
-
-# nodejs-lts
-
-# php
-
-# totalcommander
-
-# usbboot
-
-# vim
-# ignore vim temp files
-**/*~
-
-# vscode-portable
-vscode-portable/data/extensions/
-# set whitelist
-vscode-portable/data/user-data/*
-!vscode-portable/data/user-data/*/
-!/vscode-portable/data/user-data/User/*.ps1
-!/vscode-portable/data/user-data/User/settings.json
-!/vscode-portable/data/user-data/User/snippets/*
+# Ignore local saved files
+.save/*
