vscode: update config

--- a/apps/vscode/userdata/User/settings.json
+++ b/apps/vscode/userdata/User/settings.json
@@ -8,11 +8,10 @@
     "workbench.editor.tabSizing": "shrink",
     "explorer.autoReveal": false,
     "window.zoomLevel": 0,
-    "workbench.colorTheme": "Dracula",
+    "workbench.colorTheme": "Tiny Light",
     "workbench.iconTheme": "vscode-icons",
     "csharp.referencesCodeLens.enabled": false,
-    "debug.openDebug": "neverOpen",
-    "editor.renderWhitespace": "all",
+    "debug.openDebug": "openOnFirstSessionStart",
     "editor.renderControlCharacters": true,
     "breadcrumbs.enabled": true,
     "files.associations": {
@@ -20,10 +19,34 @@
     },
     "window.restoreWindows": "none",
     "powershell.powerShellExePath": "C:\\Windows\\SysWow64\\WindowsPowerShell\\v1.0\\powershell.exe",
-    "update.mode": "none",
+    "update.mode": "manual",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": true,
     "files.eol": "\n",
-    "editor.rulers": [80, 120],
+    "editor.rulers": [
+        80,
+        120
+    ],
+    "editor.fontFamily": "Sarasa Term CL, Consolas, 'Courier New', monospace",
+    "editor.cursorStyle": "block",
+    "editor.showFoldingControls": "always",
+    "editor.fontWeight": "500",
+    "files.insertFinalNewline": true,
+    "files.simpleDialog.enable": true,
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.openPositioning": "last",
+    "workbench.settings.useSplitJSON": true,
+    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
+    "debug.openExplorerOnEnd": true,
+    "extensions.autoCheckUpdates": false,
+    "extensions.ignoreRecommendations": true,
+    "extensions.showRecommendationsOnlyOnDemand": true,
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.enableBell": true,
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
 }
